# bitmapkit

./: .gitignore  CMakeLists.txt  README.md
.clusterfuzzlite/: build.sh  project.yaml
fuzz/: bmp_fuzzer.c  convert_fuzzer.c  dictionary.txt  ico_fuzzer.c  image_decode_fuzzer.c  metadata_fuzzer.c  pcx_fuzzer.c  pnm_fuzzer.c  recovery_fuzzer.c  tga_fuzzer.c
fuzz/corpus/image_decode_fuzzer/: basic.tga
fuzz/corpus/pcx_fuzzer/: basic.pcx
fuzz/corpus/pnm_fuzzer/: basic.pam  basic.pgm
include/bitmapkit/: bitmapkit.h  internal.h  ops.h
src/: alpha.c  atlas.c  audit.c  bmff.c  bmp.c  bmp_repair.c  buffer.c  catalog.c  checksum.c  color.c  dds.c  detect.c  diff.c  dither.c  encode.c  exrscan.c  farbfeld.c  fileio.c  gif.c  histogram.c  ico.c  iff.c  image.c  jpegscan.c  manifest.c  metadata.c  pack.c  palette.c  pathutil.c  pcx.c  pixelformat.c  pngscan.c  pnm.c  psd.c  qoi.c  ras.c  reader.c  recover.c  registry.c  report.c  (+14 more)
tests/: test_bitmapkit.c
tools/: bitmapkit.c
